--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
   <head>
+    <meta charset = "utf-8">
 <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "CSS_responsive_design.css">
     <link rel = "stylesheet" href = "CSS_web_styling.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <h4> <p class = "screen_only"> Section Menu </p> </h4>
     <nav>
     <ul class = "ace">
