--- a/bootstrap.html
+++ b/bootstrap.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "CSS_responsive_design.css">
     <link rel = "stylesheet" href = "CSS_web_styling.css">  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
       </head>
 <body>
+  <div class="jumbotron text-center">
+  <div class="container">
+  <div class="row">
+  <div class="col-sm-4">
   <h4> <p class = "screen_only"> Section Menu </p> </h4>
     <nav>
     <ul class = "ace">
@@ -19,6 +27,7 @@
       <li> <a href = "#course_projects"> <p class = "screen_only"> Course Projects </p> </a> </li>  
     </ul>
       <p>  </p>
+        <div class="col-sm-4">
   <div id = "profile_information"> </div> 
   <img src = "https://user-images.githubusercontent.com/79463731/133340916-e54949bf-1318-4d0f-946f-32ef15bc2602.JPG" width = "500" height = "500">
   <h1 style = "background-color:black;text-align:center"> <span style = "color: blue; font-weight: bold"> WALTER LOW  </span> </h1>
@@ -28,6 +37,7 @@
   <h2 style = "background-color:black;text-align:center"> Major: Information Technology </h2>
   <h2 style = "background-color:black;text-align:center"> Concentration: Business Administration </h2> 
   <hr>
+            <div class="col-sm-4">
   <div id = "education_summary">
   <h1> Education </h1>
   <p id = "educationborder"> For my first year in high school (2015), I started out in a high school in Florida named Cypress Creek High School where I got introduced into Information Technology which ended up being my major for St John's University. However, I transferred from that school in early 2016 and moved to New York. I continued my years of high school in High School for Construction Trades, Engineering, and Architecture. I decided to study engineering at that school where I learned computer, electrical and mechanical engineering. Once I graduated and got my diploma, I decided to go to St John's University and continue Information Technology. During my years in St John's, I've taken many IT classes like data analytics, computer programming, database management systems, systems analysis, cyber security, IT for business, and currently taking web development. </p>
@@ -37,6 +47,7 @@
   </ul>
   </div> 
   <hr>
+                <div class="col-sm-4">
   <div id = "work_experience">
   <h1> Work Experience/Internships </h1>
   <ul> 
@@ -44,6 +55,7 @@
   </ul>
   </div>
   <hr>
+                    <div class="col-sm-4">
   <div id = "programming_skills">
   <h1> Programming Skills </h1>
     <ul>
@@ -53,6 +65,7 @@
     </ul>
   </div> 
   <hr>
+                        <div class="col-sm-4">
   <div id = "interests_hobbies">  
       <style>
           h3 { color: black; text-shadow: 1px 1px; }
@@ -61,6 +74,7 @@
     <h3> <p class = "aqua-background"> On my free time, I would play some video games on my PC like Apex Legends, Rainbow Six Siege, Minecraft, GTA V, Escape from Tarkov, Elder Scrolls Online, Splitgate, etc. When it's not gaming, I like to do programming on my PC and continue learning different programming languages. I also enjoy working out with weights at home in my backyard. I also like to watch anime and tend to binge anime while doing work or gaming. Lastly, I like to make plans and hang out with friends. </p> </h3>   
   </div>
   <hr>
+                            <div class="col-sm-4">
   <div id = "favorite_song_film_show">
   <h1> Favorite song, film, & TV show </h1>
       <h2 style = "color: red;">  <p class = "pp"> Favorite Song </p> </h2>
@@ -73,6 +87,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/IKa6aPyC-U4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <hr>
+                                <div class="col-sm-4">
   <div id = "favorite_websites">
   <h1> Favorite website </h1>
   <div>
@@ -89,6 +104,7 @@
   </ol>
   </div> 
   <hr>
+                                    <div class="col-sm-4">
   <div id = "course_projects">
   <h1> My projects in this course </h1>
     <ul>
